@@ -197,7 +197,8 @@
     (gnc:html-document-set-style!
      ssdoc "number-cell"
      'tag "td"
-     'attribute (list "align" "right"))
+     'attribute (list "align" "left")
+     'attribute (list "nowrap"))
 
     (if (and bgpixmap
 	     (not (string=? bgpixmap "")))
